--- a/Login/style.css
+++ b/Login/style.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
   margin: 0;
   padding: 0;
@@ -6,16 +5,14 @@
   font-family: Arial, sans-serif;
 }
 
-/* Estilo para o body */
 body {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #054A1B;
+  background-color: #054a1b;
 }
 
-/* Container do formulário de login */
 .login-container {
   background-color: white;
   padding: 20px;
@@ -32,15 +29,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
 }
 
-/* Título do login */
 .login-container h2 {
   margin-bottom: 20px;
   color: #333;
 }
 
-/* Campos de entrada */
 .login-container input {
   width: 100%;
   padding: 10px;
@@ -56,7 +52,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   color: white;
-  background-color: #054A1B;
+  background-color: #054a1b;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -67,12 +63,11 @@ body {
   background-color: #096d29;
 }
 
-/* Link para registro */
 .register-link {
   display: flex;
   margin-top: 15px;
   font-size: 14px;
-  color: #054A1B;
+  color: #054a1b;
   text-decoration: none;
   transition: color 0.3s;
 }
@@ -81,8 +76,6 @@ body {
   color: #0aa039;
 }
 
-
-/* Estilo do Toast */
 .toast {
   position: fixed;
   bottom: 20px;
@@ -108,4 +101,19 @@ button.loading {
   cursor: not-allowed;
   pointer-events: none;
   background-color: #ccc;
+}
+
+.img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 125px;
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.img img {
+  width: 50%;
+  height: 50%;
 }
