--- a/register/style.css
+++ b/register/style.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
   margin: 0;
   padding: 0;
@@ -14,15 +13,24 @@ body {
   background-color: #054A1B;
 }
 
-/* Container do formulário de registro */
 .register-container {
   background-color: white;
-  padding: 30px;
+  padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  width: 300px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.register-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
-  max-width: 400px;
-  text-align: center;
+  padding: 0 15px;
 }
 
 .register-container h2 {
@@ -30,25 +38,15 @@ body {
   color: #333;
 }
 
-.form-group {
-  margin-bottom: 15px;
-  text-align: left;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-  color: #333;
-}
-
-.form-group input,
-.form-group select {
+.register-container input, select {
   width: 100%;
   padding: 10px;
-  font-size: 14px;
+  margin: 0 0 10px 0;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-size: 16px;
 }
+
 
 button[type="submit"] {
   width: 100%;
@@ -67,7 +65,6 @@ button[type="submit"]:hover {
   background-color: #096d29;
 }
 
-/* Link de voltar */
 .back-link {
   display: block;
   margin-top: 15px;
@@ -81,7 +78,6 @@ button[type="submit"]:hover {
   color: #0aa039;
 }
 
-/* Estilo do Toast */
 .toast {
   position: fixed;
   bottom: 20px;
@@ -107,4 +103,19 @@ button.loading {
   cursor: not-allowed;
   pointer-events: none;
   background-color: #ccc;
+}
+
+.img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 125px;
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.img img {
+  width: 50%;
+  height: 50%;
 }
